# SysLink

./: CMakeLists.txt  LICENSE.txt  README.md  dllmain.c  internal.h  syslink.c
tests/: CMakeLists.txt
tests/SysLinkDlg/: CMakeLists.txt  SysLinkDlg.c  SysLinkDlg_res.rc
